refactor: simplify stream collection in ShoppingCartController